--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="CSS/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<!-- Header -->
+
+		<header>
+			<nav>
+				<div class="logo__container">
+					<a href="#">
+						<img src="./Assets/images/logo.svg" alt="logo" />
+					</a>
+				</div>
+				<div class="nav__menu" id="navMenu">
+					<ul class="nav__list">
+						<li class="nav__item">
+							<a href="#" class="nav__link">Home</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Features</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Support</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Contact Us</a>
+						</li>
+					</ul>
+					<div class="btn__container-nav">
+						<button class="btn__blue">Download</button>
+					</div>
+				</div>
+			</nav>
+			<div class="burger-menu" id="burgerMenu">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
+			<div class="btn__container">
+				<button class="btn__blue">Download</button>
+			</div>
+		</header>
+
+		<!-- Main -->
+		<main>
+			<!-- Main section -->
+			<div class="section main"></div>
+		</main>
+		<script src="JS/main.js"></script>
+	</body>
 </html>
