--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<!-- Header -->
 
-		<header>
+		<header id="header">
 			<nav>
 				<div class="logo__container">
 					<a href="#">
@@ -50,22 +50,10 @@
 		<!-- Main -->
 		<main>
 			<!-- Main section -->
+			<div class="side-rectangle"></div>
 			<section class="section main">
-				<div class="rectangle">
-					<svg
-						width="295"
-						height="700"
-						viewBox="0 0 295 700"
-						fill="none"
-						xmlns="http://www.w3.org/2000/svg"
-					>
-						<path
-							d="M0 30C0 13.4315 13.4315 0 30 0H295.288V700H30C13.4315 700 0 686.569 0 670V30Z"
-							fill="#EC5863"
-						/>
-					</svg>
-				</div>
-				<div class="main__container container grid">
+				<!-- <div class="side-rectangle"></div> -->
+				<div class="main__container grid">
 					<div class="img__container">
 						<svg
 							viewBox="0 0 547 395"
@@ -560,16 +548,19 @@
 			<!-- Safe section -->
 
 			<section class="section safe">
-				<div class="safe__container container grid">
+				<div class="safe__container grid">
 					<div class="app-img__container">
-						<div class="square big"></div>
-						<div class="square"></div>
-						<div class="square"></div>
+						<div class="rectangle big"></div>
+						<div class="rectangle"></div>
+						<div class="rectangle"></div>
 						<img src="./Assets/images/mobileApp.png" alt="Mobile App" />
 					</div>
 					<div class="safe__info">
 						<div class="info__container">
-							<h2>Stay safe with Go<span>Corona.</span></h2>
+							<h2>
+								Stay safe with<br />
+								Go<span>Corona.</span>
+							</h2>
 							<p>
 								24x7 Support and user friendly mobile platform to bring
 								healthcare to your fingertips. Signup and be a part of the new
@@ -582,7 +573,99 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Experts Section -->
+
+			<section class="section experts">
+				<div class="experts__container grid">
+					<div class="statistics">
+						<div class="rectangle"></div>
+						<div class="rectangle md"></div>
+						<div class="rectangle big"></div>
+						<div class="stats__container">
+							<div>
+								<h3>2m</h3>
+								<p>users</p>
+							</div>
+							<div>
+								<h3>78</h3>
+								<p>countries</p>
+							</div>
+							<div>
+								<h3>10,000+</h3>
+								<p>medical experts</p>
+							</div>
+						</div>
+					</div>
+					<div class="info__container">
+						<div class="expert__info">
+							<div class="info">
+								<h2>Talk to <span>experts.</span></h2>
+								<p>
+									Book appointments or submit queries into thousands of forums
+									concerning health issues and prevention against noval Corona
+									Virus.
+								</p>
+							</div>
+							<div class="btn__container">
+								<button class="btn__red">Features</button>
+							</div>
+						</div>
+
+						<div class="img__container">
+							<img src="./Assets/images/Experts.png" alt="Experts" />
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Healthcare section -->
+			<section class="section healthcare">
+				<div class="section__title">
+					<h2><span>Healthcare</span> at your Fingertips.</h2>
+					<p>
+						Bringing premium healthcare features to your fingertips. User
+						friendly mobile platform to bring healthcare to your fingertips.
+						Signup and be a part of the new health culture.
+					</p>
+				</div>
+				<div class="healthcare__cards">
+					<div class="card">
+						<img src="./Assets/icons/Human.png" alt="Human" />
+						<div class="card__info">
+							<h3>Symptom Checker</h3>
+							<p>
+								Check if you are infected by COVID-19 with our Symptom Checker
+							</p>
+						</div>
+					</div>
+					<div class="card">
+						<img src="./Assets/icons/Doctor.png" alt="Doctor" />
+						<div class="card__info">
+							<h3>24x7 Medical support</h3>
+							<p>Consult with 10,000+ health workers about your concerns.</p>
+						</div>
+					</div>
+					<div class="card">
+						<img src="./Assets/icons/Heart.png" alt="Heart" />
+						<div class="card__info">
+							<h3>Conditions</h3>
+							<p>Bringing premium healthcare features to your fingertips.</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
+		<footer class="footer">
+			<div class="download__btn">
+				<a href="#">
+					<img src="./Assets/icons/googlePlay.png" alt="GooglePlay" />
+				</a>
+				<a href="#">
+					<img src="./Assets/icons/AppStore.png" alt="AppStore" />
+				</a>
+			</div>
+		</footer>
 		<script src="JS/main.js"></script>
 	</body>
 </html>
